// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home > renders Level links 1`] = `
<div>
  <div
    class="_container_1f84b2"
  >
    <a
      class="_card_1f84b2"
      href="/level/1/details"
    >
      <img
        src="/level1"
      />
      <div
        class="_title_1f84b2"
      >
        LEVEL 
        1
      </div>
    </a>
    <a
      class="_card_1f84b2"
      href="/level/2/details"
    >
      <img
        src="/level2"
      />
      <div
        class="_title_1f84b2"
      >
        LEVEL 
        2
      </div>
    </a>
  </div>
</div>
`;

exports[`Home > renders error message on useFetch error 1`] = `
<div>
  <p>
    Error fetching level data.
  </p>
</div>
`;

exports[`Home > renders loading message on useFetch loading 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;
